Fixed long lines being cut off in links descriptions

--- a/web-app/static/css/style.css
+++ b/web-app/static/css/style.css
@@ -99,3 +99,7 @@ img.media-object { max-width: 64px; max-height:64px; }
 .hover-parent:hover .hover-child {
   visibility: visible;
 }
+
+.break-word {
+  word-wrap: break-word;
+}
